<resources>
    <string name="app_name">FireBase</string>
    <string name="emistv">EmisTv</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">reset password</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="trailer">Trailer</string>
</resources>