<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/emistv"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:ems="15"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="8"
        android:text="@string/login" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-50dp"
        android:layout_toStartOf="@id/signIn"
        android:text="@string/forgot_password" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_centerInParent="true"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/signIn"
        android:text="@string/sign_in" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>

