<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/emistv"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="15"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="12"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"/>


</RelativeLayout>